[tool.poetry]
name = "t3"
version = "0.1.0"
description = ""
authors = ["Faisal Albasu <albasfaisal@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
supabase = "^2.9.0"
python-dotenv = "^1.0.1"
pypdf = "^5.0.1"
python-docx = "^1.1.2"
st-supabase-connection = "^2.0.0"
argon2-cffi = "^23.1.0"
openai = "^1.53.0"
six = "^1.16.0"
streamlit-cookie-banner = "^0.1.0"
streamlit-supabase-auth = "^1.0.2"
pyright = "^1.1.389"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonPath = "/opt/homebrew/Caskroom/miniconda/base/envs/dap/bin"
venvPath = "/opt/homebrew/Caskroom/miniconda/base/envs/"
venv = "dap"
typeCheckingMode = "off"
